update routing structure

--- a/src/app/pages/location/cameras/cameras.component.html
+++ b/src/app/pages/location/cameras/cameras.component.html
@@ -1,3 +1,7 @@
-<p>
-  cameras works!
-</p>
+<div class="location">
+  <a [routerLink]="['cameras']">Cameras</a>
+  <br />
+  <a (click)="onCamera(1)">Camera 1</a>
+  <a (click)="onCamera(2)">Camera 2</a>
+  <a (click)="onCamera(3)">Camera 3</a>
+</div>
