--- a/src/app/pages/locations/locations.component.html
+++ b/src/app/pages/locations/locations.component.html
@@ -1,3 +1,4 @@
-<p>
-  locations works!
-</p>
+<div class="locations">
+  <a [routerLink]="['/', 'location', '1']">Locaton 1</a>
+  <a [routerLink]="['/', 'location', '2']">Locaton 2</a>
+</div>
