feat: add topbar and sidebar

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,15 +1,5 @@
-<div class="layout">
-  <div class="sidebar-wrapper">
-    <app-sidebar></app-sidebar>
-  </div>
-
-  <div class="main-wrapper">
-    <div class="topbar-wrapper">
-      <app-topbar></app-topbar>
-    </div>
-
-    <div class="main-content-wrapper">
-      <app-main></app-main>
-    </div>
-  </div>
+<app-topbar></app-topbar>
+<app-sidebar></app-sidebar> 
+<div class="main-content">
+  <app-main></app-main>
 </div>
