--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,120 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');@import url('https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css');html {
+	height: 100%;
+	overflow-y: auto;
+}
+body {
+	margin: 0;
+	background: #f9f9f9;
+	font-family: 'Roboto',sans-serif;
+	font-size: 14px;
+	min-width: 320px;
+	min-height: 100%;
+	&.backdrop {
+		&:before {
+			background: rgba(0,0,0,0.7);
+			content: "";
+			position: fixed;
+			left: 0;
+			top: 0;
+			width: 100%;
+			height: 100%;
+			z-index: 14;
+		}
+  }
+}
+body * {
+  box-sizing: border-box;
+}
+* {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+}
+label {
+	font-weight: normal;
+}
+textarea:focus,input:focus,* {
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	box-shadow: none;
+}
+h1 {
+	margin: 0 0 15px 0;
+}
+h2 {
+	margin: 0;
+	font-size: 28px;
+	color: #000;
+	span {
+		display: inline-block;
+		vertical-align: middle;
+	}
+	a {
+		display: inline-block;
+		vertical-align: middle;
+		&:hover {
+			opacity: .8;
+			filter: alpha(opacity=80);
+		}
+	}
+}
+h2 span+a,h2 span+span {
+	padding-left: 5px;
+}
+h2 a+a,h2 a+span {
+	padding-left: 5px;
+}
+.btn {
+	height: 34px;
+	min-width: 100px;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-o-border-radius: 4px;
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+	&.btn-primary {
+		background: #0c479d !important;
+		border-color: #0c479d !important;
+		color: #fff !important;
+		border: 1px solid #0c479d;
+		&:hover {
+			background: #fff !important;
+			color: #0c479d !important;
+		}
+	}
+	&.btn-primary-light {
+		background: #fff !important;
+		border-color: #fff !important;
+		color: #0c479d !important;
+		border: 1px solid #0c479d !important;
+		&:hover {
+			background: #0c479d !important;
+			color: #fff !important;
+		}
+	}
+}
+
+input {
+  display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
