--- a/src/app/pages/location/camera/live-stream/live-stream.component.html
+++ b/src/app/pages/location/camera/live-stream/live-stream.component.html
@@ -1,5 +1,4 @@
 <app-camera-header></app-camera-header>
-<p>
-  live-stream works!
-</p>
-<!-- <app-video></app-video> -->
+<div class="container">
+  <app-video></app-video>
+</div>
