--- a/src/app/shared/video/video.component.scss
+++ b/src/app/shared/video/video.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   vg-player {
     height: auto;
+    max-height: 590px;
     border-radius: 10px;
     #video {
       width: 100%;
@@ -21,12 +22,79 @@
         height: 32px;
       }
       vg-scrub-bar {
+        height: 10px;
         vg-scrub-bar-current-time {
           background-color: #6e6e6e;
+          top: calc(50% - 5px);
+          height: 10px;
+          border-radius: 5px;
+          
+        }  
+      }
+    }
+  }
+
+  .scrubBar {
+    height: auto;
+  }
+  .control-action {
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      li {
+        display: inline-block;
+        vertical-align: middle;
+        a {
+          display: inline-block;
+          background: none;
+          text-decoration: none;
+          color: #fff;
+          cursor: pointer;
+          span {
+            display: inline-block;
+            vertical-align: middle;
+            &.icon {
+              position: relative;
+              width: 20px;
+              height: 20px;
+              margin-right: 6px;
+              img {
+                vertical-align: top;
+              }
+              .icon-over {
+                position: absolute;
+                left: 0;
+                top: 0;
+                opacity: 0;
+                filter: alpha(opacity=0);
+                visibility: hidden;
+              }
+            }
+          }
+          &:hover {
+            color: #fe000c;
+            span {
+              img {
+                opacity: 0;
+                filter: alpha(opacity=0);
+                visibility: hidden;
+              }
+              .icon-over {
+                opacity: 1;
+                filter: alpha(opacity=100);
+                visibility: visible;
+              }
+            }
+          }
+        }
+        & + li {
+          padding-left: 30px;
         }
       }
     }
   }
+
   .top-tag {
     grid-template-columns: 1fr 1fr;
     background: transparent;
@@ -54,12 +122,60 @@
       color: #FFFFFF;
       font-family: Roboto;
       font-size: 14px;
-      line-height: 19px;
+      line-height: 21px;
       width: 90px;
       border-radius: 4px;
       background-color: #FE000C;
       padding: 10px 0;
       text-align: center;
+    }
+  }
+  @media screen and (max-width:991px) {
+    vg-player {
+      vg-controls {
+        padding-left:10px;
+        padding-right:10px
+      }
+    }
+  }
+  @media screen and (max-width:767px) {
+    vg-player {
+      vg-controls {
+        padding-top: 15px;
+      }
+      .control-action{
+        position: absolute;
+        right:inherit;
+        top:inherit;
+        bottom:8px;
+        left:0;
+        width:100%;
+        text-align:center
+      }
+    }
+  }
+  @media screen and (max-width:639px) {
+    vg-player {
+      vg-controls {
+        padding-top: 15px;
+      }
+      .control-action{
+        bottom:6px;
+        ul {
+          li {
+            a {
+              span{
+                &.icon{
+                  margin:0
+                }
+                &.icon+span{
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
