feat: implement pictures tab

--- a/src/app/pages/location/camera/live-stream/live-stream.component.html
+++ b/src/app/pages/location/camera/live-stream/live-stream.component.html
@@ -1,5 +1,5 @@
 <app-camera-header></app-camera-header>
-<div class="container">
+<div class="live-stream-container">
   <div class="date-picker-wrapper">
     <div class="date-picker">
       <input 
