--- a/src/app/shared/video/video.component.html
+++ b/src/app/shared/video/video.component.html
@@ -41,7 +41,7 @@
     </vg-controls>
     <vg-overlay-play vgFor="video"></vg-overlay-play>
     <video [vgMedia]="media" #media id="video" preload="auto">
-      <source src="https://clips.vorwaerts-gmbh.de/big_buck_bunny.mp4" type="video/mp4">
+      <source src="http://static.videogular.com/assets/videos/big_buck_bunny_720p_h264.mov" type="video/mp4">
     </video>
   </vg-player>
   <div class="top-tag">
