--- a/src/app/pages/location/camera/live-stream/live-stream.component.html
+++ b/src/app/pages/location/camera/live-stream/live-stream.component.html
@@ -14,7 +14,11 @@
       >
     </div>
   </div>
-  <app-video></app-video>
+  <!-- <app-video></app-video> -->
+  <app-stream
+    [streamData]="streamData"
+    [interval]="1"
+  ></app-stream>
   <div class="section">
     <h2>Events</h2>
     <div class="section-inner">
