feat: build analytics and events tabs

--- a/src/app/pages/location/camera/analytics/analytics.component.html
+++ b/src/app/pages/location/camera/analytics/analytics.component.html
@@ -1,4 +1,83 @@
 <app-camera-header></app-camera-header>
-<p>
-  analytics works!
-</p>
+<div class="carema-analytics">
+  <div class="row box-list">
+    <div class="col-sm-6 col-md-4 col-lg-3 box-item">
+      <div class="box-inner clearfix">
+        <p class="img"><img src="../../../../../assets/images/icons/ico_user.svg" alt=""></p>
+        <div class="box-info">
+          <h3>3.5M <span>of users</span></h3>               
+        </div><!-- box-info -->
+      </div><!-- box-inner -->
+    </div><!-- box-item -->
+
+    <div class="col-sm-6 col-md-4 col-lg-3 box-item">
+      <div class="box-inner clearfix">
+        <p class="img"><img src="../../../../../assets/images/icons/ico_view_b.svg" alt=""></p>
+        <div class="box-info">
+          <h3>250K<span>Images viewed</span></h3>               
+        </div><!-- box-info -->
+      </div><!-- box-inner -->
+    </div><!-- box-item -->
+
+    <div class="col-sm-6 col-md-4 col-lg-3 box-item">
+      <div class="box-inner clearfix">
+        <p class="img"><img src="../../../../../assets/images/icons/ico_upload.svg" alt=""></p>
+        <div class="box-info">
+          <h3>95K<span>Images uploaded</span></h3>               
+        </div><!-- box-info -->
+      </div><!-- box-inner -->
+    </div><!-- box-item -->
+
+    <div class="col-sm-6 col-md-4 col-lg-3 box-item">
+      <div class="box-inner clearfix">
+        <p class="img"><img src="../../../../../assets/images/icons/ico_process.svg" alt=""></p>
+        <div class="box-info">
+          <h3>68K<span>Image processed</span></h3>               
+        </div><!-- box-info -->
+      </div><!-- box-inner -->
+    </div><!-- box-item -->
+  </div><!-- box-list -->
+
+  <div class="select-filter-time">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="row">
+          <div class="col-sm-6">
+            Start date
+          </div>
+          <div class="col-sm-6">
+            End date
+          </div>
+        </div>
+      </div>
+    </div>
+  </div><!-- select-time -->
+
+  <div class="chart-list">
+    <div class="row">
+      <div class="col-sm-7 col-lg-8 chart-box">
+        <div class="chart-box-inner">
+          <p class="middle">Chart</p>
+        </div><!-- chart-box-inner -->
+      </div><!-- chart-box -->
+
+      <div class="col-sm-5 col-lg-4 chart-box">
+        <div class="chart-box-inner">
+          <p class="middle">Chart</p>
+        </div><!-- chart-box-inner -->
+      </div><!-- chart-box -->
+
+      <div class="col-sm-5 col-lg-4 chart-box">
+        <div class="chart-box-inner">
+          <p class="middle">Chart</p>
+        </div><!-- chart-box-inner -->
+      </div><!-- chart-box -->
+
+      <div class="col-sm-7 col-lg-8 chart-box">
+        <div class="chart-box-inner">
+          <p class="middle">Chart</p>
+        </div><!-- chart-box-inner -->
+      </div><!-- chart-box -->
+    </div>
+  </div><!-- chart-list -->
+</div>
