--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,7 @@
 <app-topbar></app-topbar>
-<app-sidebar></app-sidebar> 
-<div class="main-content">
-  <app-main></app-main>
-</div>
+<article id="Content">
+  <app-sidebar></app-sidebar>
+  <div id="Main">
+    <app-main></app-main>
+  </div>
+</article>
