--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
-<div id="sidebar" [className] = "isOpenMobileSidebar ? 'side-open' : ''">
-  <h1 id="logo"><a href=""><img src="../../../assets/images/common/logo.svg" alt=""></a></h1>
+<div id="Side" [className] = "isOpenMobileSidebar ? 'side-open' : ''">
+  <h1 id="Logo"><a href=""><img src="../../../assets/images/common/logo.svg" alt=""></a></h1>
   <div class="side-nav" (click)="toggleSidebar()">
     <ul class="nav-list">
       <li [className] = "(!routeUrl || routeUrl === 'dashboard') ? 'active' : ''">
