--- a/src/app/layout/topbar/topbar.component.scss
+++ b/src/app/layout/topbar/topbar.component.scss
@@ -1,338 +1,3 @@
-#header {
-	background: #fff;
-	position: fixed;
-	left: 0;
-	top: 0;
-	width: 100%;
-	padding: 15px 50px 15px 290px;
-	min-height: 70px;
-	z-index: 10;
-	.section-mobile {
-		position: absolute;
-		left: 10px;
-		top: 12px;
-		.navbar-toggle {
-			background: none !important;
-			display: block !important;
-			margin: 0;
-			left: 0;
-			top: 3px;
-			position: absolute;
-			opacity: 1;
-			filter: alpha(opacity=100);
-			visibility: visible;
-			z-index: 10001;
-			padding: 0;
-			border: none;
-			width: 28px;
-			height: 19px;
-			cursor: pointer;
-			span {
-				display: block;
-				position: absolute;
-				height: 3px;
-				width: 50%;
-				background: #5a5a5a;
-				opacity: 1;
-				-webkit-transform: rotate(0deg);
-				-moz-transform: rotate(0deg);
-				-o-transform: rotate(0deg);
-				transform: rotate(0deg);
-				-webkit-transition: .25s ease-in-out;
-				-moz-transition: .25s ease-in-out;
-				-o-transition: .25s ease-in-out;
-				transition: .25s ease-in-out;
-				&:nth-child(even) {
-					left: 50%;
-				}
-				&:nth-child(odd) {
-					left: 0;
-				}
-			}
-			&.open {
-				span {
-					&:nth-child(1) {
-						left: 5px;
-						top: 5px;
-					}
-					&:nth-child(2) {
-						left: 12px;
-						top: 5px;
-					}
-					&:nth-child(3) {
-						left: -50%;
-						opacity: 0;
-					}
-					&:nth-child(4) {
-						left: 100%;
-						opacity: 0;
-					}
-					&:nth-child(5) {
-						left: 5px;
-						top: 12px;
-					}
-					&:nth-child(6) {
-						left: 12px;
-						top: 12px;
-					}
-				}
-			}
-		}
-	}
-	#Logo-sp {
-		margin: 0 0 0 40px;
-	}
-	.search-mobile {
-		display: none;
-	}
-	.close-search {
-		display: none;
-	}
-	.form-search {
-		float: left;
-		position: relative;
-		padding-right: 190px;
-		width: 100%;
-		input[type="text"] {
-			color: #5a5a5a;
-			padding-left: 25px;
-			height: 40px;
-			padding-bottom: 5px;
-			border: none;
-			-webkit-box-shadow: none;
-			box-shadow: none;
-			width: 100%;
-		}
-		.icon-search {
-			position: absolute;
-			left: 0;
-			top: 50%;
-			-webkit-transform: translate(0, -50%);
-			-ms-transform: translate(0, -50%);
-			transform: translate(0, -50%);
-      margin: 0;
-		}
-	}
-	.user {
-    position: absolute;
-		right: 50px;
-		top: 15px;
-		.dropdown-toggle {
-			display: inline-block;
-			cursor: pointer;
-			.avatar {
-				display: inline-block;
-				vertical-align: middle;
-				img {
-					width: 40px;
-					height: auto;
-					border-radius: 50%;
-					-webkit-border-radius: 50%;
-					-moz-border-radius: 50%;
-					-o-border-radius: 50%;
-				}
-			}
-			.user-info {
-				display: inline-block;
-				vertical-align: middle;
-				padding-left: 6px;
-				.name {
-					color: #5a5a5a;
-					margin: 0;
-					font-weight: 500;
-					span {
-						color: #b5b5b5;
-						font-weight: normal;
-						display: block;
-						font-size: 13px;
-					}
-				}
-			}
-			.caret {
-				border: none;
-				width: 10px;
-				height: 10px;
-				background: url('../../../assets/images/icons/ico_arrow_down.svg') no-repeat center center;
-        margin-left: 6px;
-        display: inline-block;
-			}
-		}
-		.dropdown-menu {
-      display: none;
-      &.open {
-        display: block;
-      }
-      margin-top: 9px;
-      position: absolute;
-			border: none;
-			background: #fff;
-			-webkit-box-shadow: 0 10px 20px 0 rgba(90,90,90,0.1);
-			box-shadow: 0 10px 20px 0 rgba(90,90,90,0.1);
-			left: inherit;
-			right: 0;
-			padding: 10px 20px;
-			min-width: 170px;
-			border-radius: 0 0 4px 4px;
-			-webkit-border-radius: 0 0 4px 4px;
-			-moz-border-radius: 0 0 4px 4px;
-      -o-border-radius: 0 0 4px 4px;
-      list-style: none;
-			li {
-				a {
-					display: inline-block;
-					padding: 10px 0;
-          background: none;
-          color: #333;
-					span {
-						display: inline-block;
-						vertical-align: middle;
-						&.icon {
-							position: relative;
-							width: 16px;
-							height: 16px;
-							margin-right: 6px;
-							img {
-								vertical-align: top;
-							}
-							.icon-over {
-								position: absolute;
-								left: 0;
-								top: 0;
-								opacity: 0;
-								filter: alpha(opacity=0);
-								visibility: hidden;
-							}
-						}
-					}
-					&:hover {
-						color: #fe000c;
-						span {
-							img {
-								opacity: 0;
-								filter: alpha(opacity=0);
-								visibility: hidden;
-							}
-							.icon-over {
-								opacity: 1;
-								filter: alpha(opacity=100);
-								visibility: visible;
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-}
-#header .section-mobile .navbar-toggle span:nth-child(1),#header .section-mobile .navbar-toggle span:nth-child(2) {
-	top: 0;
-}
-#header .section-mobile .navbar-toggle span:nth-child(3),#header .section-mobile .navbar-toggle span:nth-child(4) {
-	top: 8px;
-}
-#header .section-mobile .navbar-toggle span:nth-child(5),#header .section-mobile .navbar-toggle span:nth-child(6) {
-	top: 16px;
-}
-#header .section-mobile .navbar-toggle.open span:nth-child(1),#header .section-mobile .navbar-toggle.open span:nth-child(6) {
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
-	transform: rotate(45deg);
-}
-#header .section-mobile .navbar-toggle.open span:nth-child(2),#header .section-mobile .navbar-toggle.open span:nth-child(5) {
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
-
-@media screen and (max-width:1023px){
-  h2{
-    font-size:25px
-  }
-  #header{
-		border-bottom:1px solid #eff4fa;
-		padding:5px 10px 5px 10px;
-		min-height:50px;
-		z-index:10001
-  }
-  #header .section-mobile #Logo-sp img{
-		max-width:100px
-  }
-  #header .user{
-    min-width: auto;
-    right:10px;
-    top:10px
-  }
-  #header .user .dropdown-toggle{
-    position:relative
-  }
-  #header .user .dropdown-toggle .avatar img{
-    width:30px
-  }
-  #header .user .dropdown-toggle .user-info{
-    display:none
-  }
-  #header .user .dropdown-toggle .caret{
-    margin:0;
-    position:absolute;
-    right:0;
-    bottom:0;
-    background-color:#fff;
-    border-radius:50%;
-    -webkit-border-radius:50%;
-    -moz-border-radius:50%;
-    -o-border-radius:50%;
-    background-size:6px !important;
-    border:1px solid #eff4fa
-  }
-  #header .user .dropdown-menu{
-    margin-top: 6px
-  }
-  #header .search-mobile{
-    position:absolute;
-    right:60px;
-    top:10px;
-    display:inline-block;
-    width:30px;
-    height:30px;
-    text-align:center;
-    line-height:27px;
-    background:#fff;
-    z-index:10;
-    margin:0;
-    border:1px solid #5a5a5a;
-    border-radius:50%;
-    -webkit-border-radius:50%;
-    -moz-border-radius:50%;
-    -o-border-radius:50%;
-    cursor:pointer
-  }
-  #header .search-mobile img{
-    margin-top: 7px;
-    width:14px
-  }
-  #header .form-search{
-    display:none;
-    padding:0;
-    background:#fff;
-    z-index:10
-  }
-  #header .form-search .close-search{
-    position:absolute;
-    right:0;
-    top:50%;
-    -webkit-transform:translate(0, -50%);
-    -ms-transform:translate(0, -50%);
-    transform:translate(0, -50%);
-    display:inline-block;
-    width:16px;
-    height:16px;
-    background:url('../../../assets/images/icons/ico_close.svg') no-repeat center center;
-    background-size:16px;
-    cursor:pointer
-  }
-  #header .form-search.open{
-		display:block !important
-  }
+#Header .user .dropdown-toggle .caret {
+	background: url(../../../assets/images/icons/ico_arrow_down.svg) no-repeat center center;
 }
