--- a/src/app/pages/locations/locations.component.html
+++ b/src/app/pages/locations/locations.component.html
@@ -4,7 +4,7 @@
 </div><!-- heading -->
 
 <div class="main-content">
-    <div class="block-search">       
+    <div class="block-search">
         <form action="">
             <div class="form-search">
                 <input type="text" class="form-control" id="" placeholder="Search">
@@ -58,172 +58,28 @@
     <div class="section">
         <div class="section-inner">
             <div class="row col-list">
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
+                <div *ngFor="let location of (locationList$ | async)" class="col-xs-6 col-sm-4 col-lg-3 col-item">
                     <div class="col-inner">
                         <div class="img">
                             <p><img src="../../../assets/images/img02.jpg" alt=""></p>
                         </div><!-- img -->
                         <div class="info">
                             <p class="ttl-info">
-                                <span>Baytown Plastic Plant</span>
+                                <span>{{ location.name }}</span>
                                 <label class="heart" for=""><input type="checkbox"></label>
                             </p>
                             <div class="description">
-                                <p>Chemicals <br>USA</p>
+                                <p>{{ location.address }} <br>{{ location.country }}</p>
                             </div>
                         </div><!-- info -->
 
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img01.jpg" alt=""></p>
-                        </div><!-- img -->
-
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Kearl</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img02.jpg" alt=""></p>
-                        </div><!-- img -->
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Baytown Plastic Plant</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img01.jpg" alt=""></p>
-                        </div><!-- img -->
-
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Kearl</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img02.jpg" alt=""></p>
-                        </div><!-- img -->
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Baytown Plastic Plant</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img01.jpg" alt=""></p>
-                        </div><!-- img -->
-
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Kearl</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img02.jpg" alt=""></p>
-                        </div><!-- img -->
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Baytown Plastic Plant</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
-                                class="btn btn-primary-light">View Cameras</a></p>
-                    </div><!-- col-inner -->
-                </div><!-- col-item -->
-
-                <div class="col-xs-6 col-sm-4 col-lg-3 col-item">
-                    <div class="col-inner">
-                        <div class="img">
-                            <p><img src="../../../assets/images/img01.jpg" alt=""></p>
-                        </div><!-- img -->
-
-                        <div class="info">
-                            <p class="ttl-info">
-                                <span>Kearl</span>
-                                <label class="heart" for=""><input type="checkbox"></label>
-                            </p>
-                            <div class="description">
-                                <p>Chemicals <br>USA</p>
-                            </div>
-                        </div><!-- info -->
-
-                        <p class="button-bot"><a [routerLink]="['/', 'location', '1']"
+                        <p class="button-bot"><a [routerLink]="['/', 'location', location.id]"
                                 class="btn btn-primary-light">View Cameras</a></p>
                     </div><!-- col-inner -->
                 </div><!-- col-item -->
             </div><!-- col-list -->
 
-            <div class="paging text-right">
+            <!-- <div class="paging text-right">
                 <ul class="pagination">
                     <li>
                         <a aria-label="Previous">
@@ -243,7 +99,7 @@
                         </a>
                     </li>
                 </ul>
-            </div><!-- paging -->
+            </div> -->
         </div><!-- section-inner -->
     </div><!-- section -->
 </div><!-- main-content -->
