--- a/src/app/pages/location/camera/analytics/analytics.component.html
+++ b/src/app/pages/location/camera/analytics/analytics.component.html
@@ -1,4 +1,4 @@
-<div class="carema-analytics">
+<div role="tabpanel" class="tab-pane" id="analytics">
   <div class="row box-list">
     <div class="col-sm-6 col-md-4 col-lg-3 box-item">
       <div class="box-inner clearfix">
