--- a/src/app/pages/location/camera/events/events.component.html
+++ b/src/app/pages/location/camera/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="camera-events">
+<div role="tabpanel" class="tab-pane" id="events">
   <div class="block-search">
     <form action="">
       <div class="form-search">
