--- a/src/app/pages/location/camera/live-stream/live-stream.component.html
+++ b/src/app/pages/location/camera/live-stream/live-stream.component.html
@@ -1,16 +1,17 @@
-<div class="live-stream-container">
-  <div class="date-picker-wrapper">
-    <div class="date-picker">
-      <input 
-        class="date-time-picker"
-        placeholder="Select Date..."
-        mwlFlatpickr
-        [(ngModel)]="selectedDate" 
-        [altInput]="true" 
-        [enableTime]="true"
-        dateFormat="Y-m-d H:i"
-        [convertModelValue]="true"
-      >
+<div role="tabpanel" class="tab-pane active" id="livestream">
+  <div class="select-time">
+    <div class="flatpickr">
+        <input 
+          class="date-time-picker"
+          placeholder="Select Date..."
+          mwlFlatpickr
+          [(ngModel)]="selectedDate" 
+          [altInput]="true" 
+          [enableTime]="true"
+          dateFormat="Y-m-d H:i"
+          [convertModelValue]="true"
+        >
+        <img src="../../../../../assets/images/icons/ico_calendar.svg" alt="">
     </div>
   </div>
   <!-- <app-video></app-video> -->
@@ -39,5 +40,5 @@
         </div>
       </div>
     </div>
-</div>
+  </div>
 </div>
