--- a/src/app/pages/location/camera/pictures/pictures.component.html
+++ b/src/app/pages/location/camera/pictures/pictures.component.html
@@ -1,4 +1,4 @@
-<div class="pictures-container">
+<div role="tabpanel" class="tab-pane" id="pictures">
   <div class="block-search">
     <form action="">
         <div class="form-search">
@@ -163,8 +163,8 @@
                         <button type="button" class="btn btn-primary-light" data-dismiss="modal">Close</button>
                     </div><!-- modal-footer -->
                 </div>
-            </div><!-- modal-dialog -->
-        </div><!-- modal -->
-    </div><!-- section-inner -->
-  </div><!-- section -->
+            </div>
+        </div>
+    </div>
+  </div>
 </div>
