--- a/src/app/pages/location/location.component.html
+++ b/src/app/pages/location/location.component.html
@@ -1,6 +1,6 @@
 <div class="heading">
   <h2>
-      <span>Baytown Plastic Plant</span>
+      <span>{{ (selectedLocation$ | async)?.name }}</span>
       <a><img src="../../../../assets/images/icons/ico_edit.svg" alt=""></a>
   </h2>
   <p class="button-right"><a class="btn btn-primary" >Add Camera</a></p>
